# controllers/userControllers.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"fmt"
 	"log"
 	"net/http"
 	"strconv"
@@ -9,16 +10,33 @@ import (
 	"github.com/ShahSau/culinary-bliss/database"
 	"github.com/ShahSau/culinary-bliss/helpers"
 	"github.com/ShahSau/culinary-bliss/models"
+	"github.com/ShahSau/culinary-bliss/types"
 	"github.com/gin-gonic/gin"
 	"go.mongodb.org/mongo-driver/bson"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 	"go.mongodb.org/mongo-driver/mongo"
 	"golang.org/x/crypto/bcrypt"
 )
 
 var userCollection *mongo.Collection = database.GetCollection(database.DB, "users")
 
+// @Summary		Create User
+// @Description	Create a new user
+// @Tags			Admin
+// @Accept			json
+// @Produce		json
+// @Security		BearerAuth
+// @param Authorization header string true "Token"
+// @Success		200	{object}	string
+// @Failure		500	{object}	string
+// @Router			/users [post]
 func GetUsers(c *gin.Context) {
+	userEmail, _ := c.Get("first_name")
+	var isAdmin = helpers.IsAdmin(userEmail.(string))
+
+	if !isAdmin {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "You are not authorized to view this resource"})
+		return
+	}
 	recordPerPage, err := strconv.Atoi(c.Query("recordPerPage"))
 	if err != nil || recordPerPage < 1 {
 		recordPerPage = 10
@@ -31,47 +49,60 @@ func GetUsers(c *gin.Context) {
 
 	startIndex := (page - 1) * recordPerPage
 	startIndex, err = strconv.Atoi(c.Query("startIndex"))
-	if err != nil || startIndex < 0 {
-		startIndex = 0
-	}
 
 	matchStage := bson.D{{Key: "$match", Value: bson.D{{}}}}
 	projectStage := bson.D{
 		{
 			Key: "$project", Value: bson.D{
-				{Key: "_id", Value: 0},
-				{Key: "total_count", Value: 1},
-				{Key: "user_items", Value: bson.D{{Key: "$slice", Value: []interface{}{"$data", startIndex, recordPerPage}}}},
+				{Key: "id", Value: 1},
+				{Key: "first_name", Value: 1},
+				{Key: "last_name", Value: 1},
+				{Key: "email", Value: 1},
+				{Key: "role", Value: 1},
+				{Key: "phone", Value: 1},
 			},
 		},
 	}
 
-	_, errAgg := userCollection.Aggregate(c.Request.Context(), mongo.Pipeline{matchStage, projectStage})
+	record := bson.D{{Key: "$skip", Value: recordPerPage * (page - 1)}}
+	limit := bson.D{{Key: "$limit", Value: recordPerPage}}
 
+	result, errAgg := userCollection.Aggregate(c.Request.Context(), mongo.Pipeline{matchStage, projectStage, record, limit})
+
+	fmt.Println(result)
 	if errAgg != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": errAgg.Error()})
 		return
 	}
 
 	var allUsers []bson.M
+	if err = result.All(c.Request.Context(), &allUsers); err != nil {
+		log.Fatal(err)
+	}
 
-	c.JSON(http.StatusOK, gin.H{"data": allUsers[0], "total_count": allUsers[0]["total_count"], "page": page, "recordPerPage": recordPerPage, "startIndex": startIndex})
+	c.JSON(http.StatusOK, gin.H{"data": allUsers, "page": page, "recordPerPage": recordPerPage, "startIndex": startIndex})
 
 }
 
+// @Summary		Get a  User
+// @Description	Get a user Details by ID
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Security		BearerAuth
+// @param Authorization header string true "Token"
+// @Param 		 id path string true "User ID"
+// @Success		200	{object}	string
+// @Failure		500	{object}	string
+// @Router			/users/{id} [get]
 func GetUser(c *gin.Context) {
 	userId := c.Param("id")
-
-	if err := c.ShouldBindJSON(&userId); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
 
 	var user models.User
 
 	defer c.Request.Body.Close()
 
-	err := userCollection.FindOne(c.Request.Context(), bson.D{{Key: "id", Value: userId}}).Decode(&user)
+	err := userCollection.FindOne(c.Request.Context(), bson.D{{Key: "user_id", Value: userId}}).Decode(&user)
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -82,6 +113,17 @@ func GetUser(c *gin.Context) {
 
 }
 
+// @Summary		Update User
+// @Description	Update user details
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Security		BearerAuth
+// @param Authorization header string true "Token"
+// @Param 		 user body types.RegisterUser true "User"
+// @Success		200	{object}	string
+// @Failure		500	{object}	string
+// @Router			/users/{id} [put]
 func UpdateUser(c *gin.Context) {
 	userId := c.Param("id")
 	var user models.User
@@ -91,9 +133,23 @@ func UpdateUser(c *gin.Context) {
 		return
 	}
 
+	// find the user
+	var foundUser models.User
+	err := userCollection.FindOne(c.Request.Context(), bson.D{{Key: "user_id", Value: userId}}).Decode(&foundUser)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	user.Password = foundUser.Password
+	user.CreatedAt = foundUser.CreatedAt
+	user.ID = foundUser.ID
+	user.Role = foundUser.Role
+	user.User_id = foundUser.User_id
 	user.UpdatedAt, _ = time.Parse(time.RFC3339, time.Now().Format(time.RFC3339))
 
-	_, err := userCollection.UpdateOne(c.Request.Context(), bson.D{{Key: "id", Value: userId}}, bson.D{{Key: "$set", Value: user}})
+	_, err = userCollection.UpdateOne(c.Request.Context(), bson.D{{Key: "user_id", Value: userId}}, bson.D{{Key: "$set", Value: user}})
 
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -103,11 +159,27 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"error": false, "message": "User updated successfully", "status": http.StatusOK, "success": true, "data": user})
 }
 
+// @Summary		Delete User
+// @Description	Delete user
+// @Tags			Admin
+// @Accept			json
+// @Produce		json
+// @Security		BearerAuth
+// @param Authorization header string true "Token"
+// @Param 		 id path string true "User ID"
+// @Success		200	{object}	string
+// @Failure		500	{object}	string
+// @Router			/users/{id} [delete]
 func DeleteUser(c *gin.Context) {
 	userId := c.Param("id")
 
-	if err := c.ShouldBindJSON(&userId); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	defer c.Request.Body.Close()
+
+	userEmail, _ := c.Get("first_name")
+	var isAdmin = helpers.IsAdmin(userEmail.(string))
+
+	if !isAdmin {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "You are not authorized to view this resource"})
 		return
 	}
 
@@ -120,103 +192,19 @@ func DeleteUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"error": false, "message": "User deleted successfully", "status": http.StatusOK, "success": true, "data": nil})
 }
 
-func Login(c *gin.Context) {
-	var user models.User
-	var foundUser models.User
-	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	err := userCollection.FindOne(c.Request.Context(), bson.D{{Key: "email", Value: user.Email}}).Decode(&foundUser)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	passwordIsValid, msg := ComparePassword(foundUser.Password, user.Password)
-
-	if !passwordIsValid {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": msg})
-		return
-	}
-
-	token, refreshToken, _ := helpers.GenerateAllTokens(foundUser.User_id, foundUser.Email, foundUser.First_name, foundUser.Last_name)
-
-	helpers.UpdateAllTokens(foundUser.User_id, token, refreshToken)
-
-	c.JSON(http.StatusOK, gin.H{"error": false, "message": "User logged in successfully", "data": foundUser, "status": http.StatusOK, "success": true})
-
-}
-
-func Register(c *gin.Context) {
-	var user models.User
-	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	count, err := userCollection.CountDocuments(c.Request.Context(), bson.D{{Key: "email", Value: user.Email}})
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	if count > 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "email already exists"})
-		return
-	}
-
-	count, err = userCollection.CountDocuments(c.Request.Context(), bson.D{{Key: "phone", Value: user.Phone}})
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if count > 0 {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "phone number already exists"})
-		return
-	}
-
-	password := HashPassword(user.Password)
-	user.Password = password
-
-	user.CreatedAt, _ = time.Parse(time.RFC3339, time.Now().Format(time.RFC3339))
-	user.UpdatedAt, _ = time.Parse(time.RFC3339, time.Now().Format(time.RFC3339))
-	user.ID = primitive.NewObjectID()
-	user.User_id = user.ID.Hex()
-
-	token, refreshToken, _ := helpers.GenerateAllTokens(user.User_id, user.Email, user.First_name, user.Last_name)
-	user.Token = token
-	user.RefreshToken = refreshToken
-
-	_, err = userCollection.InsertOne(c.Request.Context(), user)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusCreated, gin.H{"error": false, "message": "User created successfully", "data": user, "status": http.StatusCreated, "success": true})
-
-}
-
-func Logout(c *gin.Context) {
-	var user models.User
-	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	helpers.UpdateAllTokens(user.User_id, "", "")
-
-	c.JSON(http.StatusOK, gin.H{"error": false, "message": "User logged out successfully", "status": http.StatusOK, "success": true})
-}
-
+// @Summary		Reset Password
+// @Description	Reset user password
+// @Tags			Auth
+// @Accept			json
+// @Produce		json
+// @Security		BearerAuth
+// @param Authorization header string true "Token"
+// @Param 		 user body types.PasswordReset true "User"
+// @Success		200	{object}	string
+// @Failure		500	{object}	string
+// @Router			/reset-password [post]
 func ResetPassword(c *gin.Context) {
-	var user struct {
-		Email       string `json:"email" binding:"required"`
-		OldPassword string `json:"old_password" binding:"required"`
-		NewPassword string `json:"new_password" binding:"required"`
-	}
+	var user types.PasswordReset
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
