# models/userModel.go
@@ -13,11 +13,11 @@ type User struct {
 	Email        string             `json:"email" binding:"required" bson:"email"`
 	Password     string             `json:"password" binding:"required" bson:"password"`
 	Avatar       string             `json:"avatar" bson:"avatar"`
-	Phone        string             `json:"phone" bson:"phone"`
-	Role         string             `json:"role" binding:"required" validate:"eq=Admin|eq=User" bson:"role"`
+	Phone        string             `json:"phone" binding:"required" bson:"phone"`
+	Role         string             `json:"role" validate:"eq=Admin|eq=User" bson:"role"`
 	CreatedAt    time.Time          `json:"created_at,omitempty" bson:"created_at,omitempty"`
 	UpdatedAt    time.Time          `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
-	User_id      string             `json:"user_id" binding:"required" bson:"user_id"`
+	User_id      string             `json:"user_id" bson:"user_id"`
 	Token        string             `json:"token,omitempty" bson:"token,omitempty"`
 	RefreshToken string             `json:"refresh_token,omitempty" bson:"refresh_token,omitempty"`
 }
